@@ -1,3 +1,10 @@
+1998-02-05  Phil Blundell  <philb@gnu.org>
+
+	* lib/ash.c: Don't redefine ARPHRD constant.  Change it from
+ 	ARPHRD_ASH64 to just ARPHRD_ASH, since the encap is the same for
+ 	16Mbps.
+	* lib/hw.c: Print just `Ash', not `64Mbps Ash'.
+
 1998-01-31  Phil Blundell  <philb@gnu.org>
 
 	* lib/inet6_gr.c (rprint_fib6): Reinstate the "U" flag, although it
